fixed background not covering whole page

--- a/client/src/components/styles.css
+++ b/client/src/components/styles.css
@@ -13,6 +13,7 @@ div.form {
   margin-left: auto;
   margin-right: auto;
   text-align: left;
+  color: white;
 }
 
 input[type="text"] {
@@ -141,7 +142,7 @@ button:hover {
   background-color: #04AA6D;
 }
 
-.darken {
+html {
   background-image:
     linear-gradient(
       rgba(0, 0, 0, 0.3),
